--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   cupertino_icons: ^0.1.2
   http: ^0.12.0+4
   font_awesome_flutter:
+  flutter_slidable: ^0.5.4
 
 dev_dependencies:
   flutter_test:
