--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   http: ^0.12.0+4
   font_awesome_flutter:
   flutter_slidable: ^0.5.4
+  rxdart:
 
 dev_dependencies:
   flutter_test:
