--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,7 +14,7 @@ description: A new Flutter project.
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.1.0 <3.0.0"
+  sdk: ">= 3.4.3 <4.0.0"
 
 dependencies:
   flutter:
@@ -22,10 +22,10 @@ dependencies:
       
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^0.1.2
-  http: ^0.12.0+4
+  cupertino_icons: ^1.0.8
+  http: ^1.2.2
   font_awesome_flutter:
-  flutter_slidable: ^0.5.4
+  flutter_slidable: ^3.1.1
   rxdart:
 
 dev_dependencies:
